--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
